      since it is no longer available (in Debian).  (Closes: #640228)
  * checks/changelog-file{,.desc}:
    + [JW] Remove debmake-specific tag in favour of more general
      debian-changelog-file-contains-invalid-email-address.
      (Closes: #639946)
    + [JW,NT] Fixed use of uninitialized value as hash key.
      (Closes: #640238)
  * checks/{conffile,etcfiles}{,.desc}:
    + [JW] Merged etcfiles into conffile.  (Closes: #637590)
  * checks/copyright-file{,.desc}:
    + [JW] Check for CRLF line endings in copyright files.
      (Closes: #634191)
    + [JW] Extended helper-templates-in-copyright and ensure it is
      only emitted once per package.
  * checks/debhelper{,.desc}:
    + [NT] Recognise /usr/share/R/debian/r-cran.mk as a cdbs-based
      build.  This prevents false-positive "unneeded cdbs" warning.
    + [JW] Check for use of the obsolete dh_installmanpages debhelper
      program.  Thanks to Joey Hess for the report.  (Closes: #634112).
  * checks/debian-readme{,.desc}:
    + [JW] Replace debmake-specific tag with more general
      readme-debian-contains-invalid-email-address.
  * checks/description.desc:
    + [JW] Added references to some tags.  (Closes: #640853)
  * checks/duplicate-files{,.desc}:
    + [NT] Replace the exception for "__init__.py" files by excluding
      all empty files from the check.  The bug (#632789) only requests
      an exception for "empty __init__.py" files and generally empty
      files are unlikely to cause a serious size-waste.
  * checks/fields{,.desc}:
    + [NT] Mention that perl modules included in perl itself should
      be the first dependency if it is only included in the perl
      from experimental.  Thanks to Dominic Hargreaves for the
      report and the patch.  (Closes: #637793)
    + [NT] Warn about (build)depending/recommending on packaging-dev.
      Thanks to Luk Claes for the report and the initial patch.
      (Closes: #629308)