@@ -62,6 +62,9 @@ Info: Each Debian package (which provides a /usr/share/doc/<i>pkg</i>
  to be a native Debian package (i.e., there is no upstream source),
  the file should usually be installed as
  /usr/share/doc/<i>pkg</i>/changelog.gz
+ .
+ Note that Lintian may emit this tag if the changelog exists, but it
+ does not look like a Debian changelog.
 Ref: policy 12.7
 
 Tag: wrong-name-for-upstream-changelog
