@@ -1,0 +1,9 @@
+#!/usr/bin/make -f
+
+%:
+	dh $@
+
+
+override_dh_md5sums:
+	find debian/*/ -type f -a -iname 'changelog.debian*' -delete
+	dh_md5sums
