@@ -1,0 +1,5 @@
+2011-09-10  Niels Thykier  <niels@thykier.net>
+
+	* This is a non-Debian ChangeLog.  Lintian should not be tricked
+	to believe this is a Debian changelog.
+
